# utils-bot-plus

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  LICENSE  Makefile  Procfile  README.md  TECHNICAL_WIKI.md  WIKI_UPDATES_SUMMARY.md  app.json  diagnose_commands.py  docker-compose.yml  docker-setup.sh  generate_invite.py  help_command_new.py  main.py  main_hosted.py  pyproject.toml  railway.json  render.yaml  requirements-dev.txt  requirements.txt  setup.py  setup.sh  sync_commands.py  verify_setup.sh
assets/games/: wordle_words.txt
cogs/: ai.py  games.py  info.py  network.py  system.py  tools.py
config/: __init__.py  settings.py
core/: __init__.py  bot.py  logger.py
docker/: sandbox.Dockerfile
migrations/: init_db.py  populate_data.py
models/: __init__.py  database.py
utils/: __init__.py  checks.py  embeds.py  fallback_sandbox.py  health.py  image_manager.py  sandboxing.py  screenshot.py
